--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create7 any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Tumble Network
+title: Ram Size Calculator
 description: >
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://tumblenet.me" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://tumble1999.github.io/ram-size-calculator/" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: pretty
 production: true
-favicon: favicon.gif
+favicon: https://tumble1999.github.io/favicon.gif
 
 gems:
    - jekyll-mentions
